[tool.poetry]
name = "drf-practice"
version = "0.1.0"
description = ""
authors = ["add-bakkers <add.re.0828@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.12"
djangorestframework = "^3.13.1"
Pygments = "^2.11.2"
isort = "^5.10.1"
black = "^22.1.0"

[tool.black]
line-length = 150
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.terraform
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | buck-out
    | build
  )
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 150
multi_line_output = 3
skip = '''
.git, .tox, .venv, .eggs, build, dist, docs
'''

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
